--- a/src/style/class/class_card2.scss
+++ b/src/style/class/class_card2.scss
@@ -70,10 +70,11 @@
     margin-bottom: 10px;
   }
 
-  .card-text {
+  .suggest-card-text {
     font-size: 12px;
     margin-bottom: 5px;
     align-self: center;
+    margin-top: 0px;
 
     /* border:1px solid gray; */
   }
