--- a/src/style/class/ClassResultCard.scss
+++ b/src/style/class/ClassResultCard.scss
@@ -78,10 +78,11 @@
     box-shadow: 0 6px 6px rgba(25, 25, 25, 0.2);
     justify-content: center;
     align-items: center;
-  }
-  &:hover {
-    transform: translateY(2px);
-    box-shadow: 0 3px 3px rgba(25, 25, 25, 0.3);
+    &:hover {
+      color: white;
+      transform: translateY(2px);
+      box-shadow: 0 3px 3px rgba(25, 25, 25, 0.3);
+    }
   }
 
   .btn_group {
