--- a/src/style/class/main_class.scss
+++ b/src/style/class/main_class.scss
@@ -1,6 +1,10 @@
 @import '../default.scss';
 $url: 'http://localhost:3000';
 
+body {
+  font-family: 'Roboto', 'TaipeiSansTCBeta-Regular', 'Noto Sans TC' sans-serif !important;
+}
+
 // 波浪背景1
 .class_wave_background {
   background: url($url + '/Pic/SVG/wave2.svg');
