--- a/src/style/user_member.scss
+++ b/src/style/user_member.scss
@@ -5,38 +5,41 @@ body {
   .mem_nameandtitle {
     padding: 16px;
   }
+  .photo_album_all {
+    width: 900px;
 
-  .photo_album2 {
-    width: 200px;
-    margin: 50px 24px 50px 24px;
-    h6 {
-      text-align: center;
-    }
-    .img_box2 {
-      width: 200px;
-      align-items: center;
-      border-radius: 5px;
-      border: solid 1px $primary-050;
-      padding: 8px;
-      background-color: #ffffff;
-      margin: 0 auto;
-      img {
-        width: 90px;
-        height: 55px;
-        padding: 5px;
+    .photo_album2 {
+      width: 220px;
+      margin: 32px 24px 50px 24px;
+
+      h6 {
+        text-align: center;
+      }
+      .img_box2 {
+        align-items: center;
+        border-radius: 5px;
+        border: solid 1px $primary-050;
+        padding: 8px;
+        background-color: #ffffff;
+        margin: 0 auto;
+        img {
+          width: 100px;
+          height: 70px;
+          padding: 5px;
+        }
       }
     }
-  }
-  .btn-mem_view {
-    width: 124.7px;
-    height: 34px;
-    padding: 10px 20px 10px 20px;
-    background-color: $secondary;
-    border: 0;
-    border-radius: 50px;
   }
 }
 
 .footer {
   bottom: 0;
+}
+.btn-mem_view {
+  width: 124.7px;
+  height: 34px;
+  padding: 10px 20px 10px 20px;
+  background-color: $secondary;
+  border: 0;
+  border-radius: 50px;
 }
