--- a/src/style/member/member_pdcard.scss
+++ b/src/style/member/member_pdcard.scss
@@ -1,17 +1,12 @@
 // 導入bootstrap所有的樣式與預設變數
-@import '~bootstrap/scss/bootstrap.scss';
+// @import '~bootstrap/scss/bootstrap.scss';
+@import '../default.scss';
 // 其它要導入覆蓋掉原本的預設bootstrap樣式要放在這下面
 
-* {
-  font-size: 12px;
-  font-family: 'Taipei Sans TC Beta';
-  padding: 0;
-  margin: 0;
-}
-
 .ccard {
-  width: 1169px;
+  width: 100%;
   height: 204px;
+  padding: 14px;
 
   .ccard.card-body {
     padding: 0 0 0 12px;
@@ -23,36 +18,6 @@
     z-index: 2;
     position: absolute;
   }
-  .eee {
-    width: 31px;
-    height: 31px;
-    border-radius: 50%;
-    margin-top: -20px;
-    position: absolute;
-    top: 180px;
-    left: 50px;
-    z-index: 3;
-  }
-  .fff {
-    width: 31px;
-    height: 31px;
-    border-radius: 50%;
-    margin-top: -20px;
-    position: absolute;
-    top: 180px;
-    left: 30px;
-    z-index: 4;
-  }
-  .hhh {
-    width: 31px;
-    height: 31px;
-    border-radius: 50%;
-    margin-top: -20px;
-    position: absolute;
-    top: 180px;
-    left: 10px;
-    z-index: 5;
-  }
 
   .card-title {
     margin: 0px;
@@ -60,13 +25,10 @@
     font-size: $font-size-base;
     font-family: 'TaipeiSansTCBeta-Bold';
     font-size: 20px;
+    padding: 8px 0;
+    width: 450px;
   }
 
-  .t2 {
-    font-size: 14px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
   .bbb {
     margin-bottom: 8px;
   }
@@ -99,19 +61,9 @@
     margin: 3px 10px 10px 1px;
   }
 
-  .ggg {
-    width: 52px;
-    height: 24px;
-    font-size: 12px;
-    border: 1px solid #4b4b4b;
-    justify-content: center;
-    align-items: center;
-  }
-
   .aaa {
     margin-left: 8px;
   }
-
   .join {
     width: 90px;
     height: 24px;
@@ -122,10 +74,16 @@
     box-shadow: 0 6px 6px rgba(25, 25, 25, 0.2);
     justify-content: center;
     align-items: center;
-    margin-left: 671px;
+  }
 
-    &:hover {
-      color: white;
+  .btn_group {
+    margin: 8px;
+    .btn-style {
+      margin: 8px;
+    }
+    .btn_edit {
+      background-color: $secondary;
+      border: $secondary;
     }
   }
 }
