--- a/src/style/class/search_main.scss
+++ b/src/style/class/search_main.scss
@@ -1,6 +1,14 @@
 .class-search-wrapper {
   max-width: 1160px;
   margin: 0 auto;
+
+  .font20 {
+    font-size: 20px;
+  }
+
+  .top-part {
+    margin-top: 10px;
+  }
   .main-area {
     margin-top: 40px;
   }
