--- a/src/style/default.scss
+++ b/src/style/default.scss
@@ -79,7 +79,7 @@ $navbar-light-active-color: $secondary;
 }
 
 body {
-  font-family: 'Roboto', 'TaipeiSansTCBeta-Regular', 'Noto Sans TC' sans-serif !important;
+  font-family: 'Roboto', 'TaipeiSansTCBeta-Regular', 'Noto Sans TC', sans-serif !important;
 }
 
 $rose: #f3b4ba;
