--- a/src/style/class/ClassResultCard.scss
+++ b/src/style/class/ClassResultCard.scss
@@ -10,6 +10,9 @@
   .card-body {
     padding-top: 0;
   }
+  .font16 {
+    font-size: 16px;
+  }
   .ccc {
     height: 50px;
     margin-top: 5px;
