--- a/src/style/class/accordion.scss
+++ b/src/style/class/accordion.scss
@@ -1,5 +1,9 @@
 .class_accordion {
   width: 227.5px;
+  .font20 {
+    font-size: 20px;
+    font-family: 'TaipeiSansTCBeta-Light';
+  }
   .checkboxs {
     display: flex;
     flex-direction: column;
