活動詳細頁途中，正在製作參與者卡片

--- a/src/style/class/ClassResultCard.scss
+++ b/src/style/class/ClassResultCard.scss
@@ -10,6 +10,9 @@
   .card-body {
     padding-top: 0;
   }
+  .font16 {
+    font-size: 16px;
+  }
   .ccc {
     height: 50px;
     margin-top: 5px;
@@ -78,10 +81,11 @@
     box-shadow: 0 6px 6px rgba(25, 25, 25, 0.2);
     justify-content: center;
     align-items: center;
-  }
-  &:hover {
-    transform: translateY(2px);
-    box-shadow: 0 3px 3px rgba(25, 25, 25, 0.3);
+    &:hover {
+      color: white;
+      transform: translateY(2px);
+      box-shadow: 0 3px 3px rgba(25, 25, 25, 0.3);
+    }
   }
 
   .btn_group {
