--- a/src/style/event/event_main.scss
+++ b/src/style/event/event_main.scss
@@ -47,7 +47,7 @@
   }
   .scroll {
     position: absolute;
-    font-family: 'TaipeiSansTCBeta-Bold';
+    font-family: 'Roboto-Bold';
     z-index: 55;
     right: 91px;
     bottom: 48px;
