--- a/src/style/class/class_card2.scss
+++ b/src/style/class/class_card2.scss
@@ -7,10 +7,6 @@
   width: 271px;
   height: 320x;
   border-radius: 10px !important;
-  &:hover {
-    transform: translateY(2px);
-    box-shadow: 0 3px 3px rgba(25, 25, 25, 0.3);
-  }
 
   .cardtitle {
     font-size: 16px;
@@ -70,10 +66,11 @@
     margin-bottom: 10px;
   }
 
-  .card-text {
+  .suggest-card-text {
     font-size: 12px;
     margin-bottom: 5px;
     align-self: center;
+    margin-top: 0px;
 
     /* border:1px solid gray; */
   }
