--- a/src/style/event/event_detail_attendant.scss
+++ b/src/style/event/event_detail_attendant.scss
@@ -2,16 +2,18 @@
 $url: 'http://localhost:3000';
 
 .detail-attendant-wrapper {
+  // background: chocolate;
   width: 730px;
-  margin: 0px;
+  margin: 36px 0px 0px 0px;
   .attendant-card {
     position: relative;
-    width: 23%;
+    width: 153px;
     height: 198px;
     border-radius: 10px;
     background: white;
     box-shadow: 0 3px 3px rgba(25, 25, 25, 0.3);
-    margin: 0px 12px 38px 12px;
+    margin: 0px 14.75px 38px 14.75px;
+    cursor: pointer;
     .detail-attendant-avatar {
       position: absolute;
       width: 95px;
@@ -20,6 +22,13 @@ $url: 'http://localhost:3000';
       background: yellowgreen;
       top: 18px;
       left: calc(50% - 47.5px);
+      overflow: hidden;
+      img {
+        widows: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center center;
+      }
     }
     .name {
       margin-top: 130px;
