--- a/src/style/event/event_searchbar.scss
+++ b/src/style/event/event_searchbar.scss
@@ -1,21 +1,26 @@
 // 導入bootstrap所有的樣式與預設變數
-// @import '~bootstrap/scss/bootstrap.scss';
-@import '../default.scss';
+@import '~bootstrap/scss/bootstrap.scss';
+
 // 其它要導入覆蓋掉原本的預設bootstrap樣式要放在這下面
+
 * {
   font-size: 16px;
   font-family: 'Taipei Sans TC Beta';
 }
 
-.searchbar {
-  .searchbar2 {
-    box-shadow: 0 3px 6px rgba(25, 25, 25, 0.2);
-    text-indent: 42px;
+.searchbar-wrapper {
+  // background: turquoise;
+  .search-form {
+    margin: 0px;
+    .search-input {
+      box-shadow: 0 3px 6px rgba(25, 25, 25, 0.2);
+      text-indent: 42px;
+    }
   }
 
   .searchicon {
     z-index: 5;
-    left: 20px;
+    left: 37px;
   }
 
   .sub {
@@ -34,14 +39,13 @@
   .ta {
     margin-right: 15px;
     margin-top: 18px;
-    padding: 4px 20px;
-    color: #104b6d;
-    border: 1px solid #104b6d;
-  }
+    padding: 5px 20px;
+    box-shadow: 0 3px 6px rgba(25, 25, 25, 0.2);
+    color: #707070;
+    border: 1px solid rgba(25, 25, 25, 0.2);
 
-  .hot {
-    margin-top: 18px;
-    padding: 5px 0px 5px 0;
-    color: #104b6d;
+    img {
+      margin-right: 10px;
+    }
   }
 }
