--- a/src/style/member/member_card.scss
+++ b/src/style/member/member_card.scss
@@ -9,7 +9,10 @@
   box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
   background-color: #ffffff;
 }
-
+.star_Points {
+  color: $primary;
+  font-family: 'TaipeiSansTCBeta-Bold';
+}
 .star {
   svg {
     color: $yellow;
@@ -17,7 +20,6 @@
     height: 23.2px;
   }
 }
-
 //navlist
 
 .mem_navlist {
