--- a/src/style/member/user_member.scss
+++ b/src/style/member/user_member.scss
@@ -71,6 +71,11 @@ body {
       margin: 0px;
       padding: 0px;
 
+      .de {
+        margin: 0px;
+        padding: 0px;
+      }
+
       h6 {
         font-family: 'TaipeiSansTCBeta-Bold';
         margin: 8px 0;
