--- a/src/style/event/event_album_photo_carousel.scss
+++ b/src/style/event/event_album_photo_carousel.scss
@@ -20,7 +20,7 @@ $mx-width: 1080px;
 }
 
 button.rec-dot {
-  box-shadow: 0 0 1px 3px $gray-default;
+  // box-shadow: 0 0 1px 3px $gray-default;
   margin: 0px 10px;
   width: 6px;
   height: 6px;
