--- a/src/style/member/member.scss
+++ b/src/style/member/member.scss
@@ -4,7 +4,8 @@ body {
   min-height: 100%;
   max-width: 100%;
 }
-.background_wave {
+
+.background_wave2 {
   width: 100%;
   background-image: url('http://localhost:3000/pic/SVG/wave.svg');
   background-repeat: no-repeat;
@@ -12,14 +13,14 @@ body {
   z-index: 1;
   //   bottom: 80px;
 }
+.background_wave {
+  width: 100%;
+  background-image: url('http://localhost:3000/pic/SVG/mem_bg.svg');
+  background-repeat: no-repeat;
+  background-position: bottom;
+  z-index: 1;
+}
 .wrapper {
   max-width: 1440px;
   margin: 0 auto;
-}
-
-.bg-couple {
-  -webkit-transform: scaleX(-1);
-  position: absolute;
-  left: 80%;
-  bottom: 28px;
 }
