--- a/src/style/member/member_navbar.scss
+++ b/src/style/member/member_navbar.scss
@@ -1,6 +1,6 @@
 @import '../default.scss';
 
-.box {
+.navbarbox {
   .navbar {
     .main_li {
       list-style: none;
@@ -13,7 +13,7 @@
   }
 }
 
-.box {
+.navbarbox {
   .navbar {
     position: absolute;
     ul {
