--- a/src/style/member/member_photo.scss
+++ b/src/style/member/member_photo.scss
@@ -11,8 +11,7 @@
     width: 210px;
     height: 144px;
     border-radius: 5px;
-    border: solid 1px $primary-050;
-    padding: 8px;
+    border: solid 1px $secondary;
     background-color: #ffffff;
 
     img {
@@ -23,7 +22,9 @@
   }
 }
 .addphoto {
-  right: 0;
+  top: 40px;
+  left: -10px;
+
   SVG {
     width: 40px;
     height: 40px;
