--- a/src/style/member/member_navbar.scss
+++ b/src/style/member/member_navbar.scss
@@ -2,53 +2,90 @@
 
 .navbarbox {
   .navbar {
+    position: absolute;
     .main_li {
       list-style: none;
       padding: 5px 20px;
       .sublist {
         list-style: none;
         padding: 5px 20px;
+        display: none;
       }
     }
   }
 }
 
-.navbarbox {
-  .navbar {
-    position: absolute;
-    ul {
-      .main_li {
-        .sublist {
-          list-style: none;
-          padding: 5px 20px;
-          display: none;
+.navbar {
+  &:hover {
+    &li {
+      // background-color: $secondary-050;
+      // border-right: solid 2px $secondary-300;
+      // border-left: solid 2px $secondary-300;
+      // color: $secondary-300;
+      // opacity: 0.8;
+    }
+    & .main_li {
+      // background-color: $secondary-050;
+      // border-right: solid 2px $secondary-300;
+      // border-left: solid 2px $secondary-300;
+      // color: $secondary-300;
+      // opacity: 0.8;
 
-          a {
-            border: 0;
-          }
+      &:hover {
+        & .sublist {
+          // background-color: $secondary-050;
+          // border-right: solid 2px $secondary-300;
+          // border-left: solid 2px $secondary-300;
+          // color: $secondary-300;
+          // opacity: 0.8;
+          display: block;
         }
       }
     }
   }
 }
 
-ul {
-  .main_li:hover {
-    background-color: $secondary-050;
-    border-right: solid 2px $secondary-300;
-    border-left: solid 2px $secondary-300;
-    color: $secondary-300;
-    opacity: 0.8;
-    .sublist:hover {
-      background-color: $secondary-050;
-      border-right: solid 2px $secondary-300;
-      border-left: solid 2px $secondary-300;
-      color: $secondary-300;
-      opacity: 0.8;
-    }
-  }
+// .navbarbox {
+//   .navbar {
+//     position: absolute;
+//     ul {
+//       .main_li {
+//         list-style: none;
+//         padding: 5px 20px;
+//         .sublist {
+//           list-style: none;
+//           padding: 5px 20px;
+//           display: none;
 
-  .main_li :active {
-    opacity: 1;
-  }
-}
+//           a {
+//             border: 0;
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
+
+// .navbarbox {
+//   .navbar {
+// ul {
+//   .main_li:hover {
+//     background-color: $secondary-050;
+//     border-right: solid 2px $secondary-300;
+//     border-left: solid 2px $secondary-300;
+//     color: $secondary-300;
+//     opacity: 0.8;
+//     .sublist:hover {
+//       background-color: $secondary-050;
+//       border-right: solid 2px $secondary-300;
+//       border-left: solid 2px $secondary-300;
+//       color: $secondary-300;
+//       opacity: 0.8;
+//       display: block;
+//     }
+//   }
+
+//   .main_li :active {
+//     opacity: 1;
+//   }
+// }
